ホーム画面・ユーザー検索画面

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,12 +4,23 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #f7f7f9;
+  color: #4c535d;
+}
+
+.main2 {
+  min-height: 100vh;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  /* display: flex; */
+  flex: 1;
   background-color: #f7f7f9;
   color: #4c535d;
 }
